[gd_scene load_steps=7 format=3 uid="uid://dch6a6f1daf6n"]

[ext_resource type="PackedScene" uid="uid://bc2skl5nbytm0" path="res://Scenes/Prefabs/interactableObject.tscn" id="1_gj0r3"]
[ext_resource type="Script" path="res://Src/Gameplay/cherries/cherryOnBush.gd" id="2_irony"]
[ext_resource type="PackedScene" uid="uid://145r8jjx1ief" path="res://Assets/Models/cherries/cherry1.glb" id="3_m1epp"]
[ext_resource type="PackedScene" uid="uid://ngckcwor00fy" path="res://Assets/Models/cherries/cherry2.glb" id="4_ggq7r"]
[ext_resource type="PackedScene" uid="uid://b255nxpwbyhv0" path="res://Assets/Models/cherries/special/cherrySpoiled.glb" id="5_gxad1"]
[ext_resource type="PackedScene" uid="uid://dc0y07wflps7r" path="res://Assets/Models/cherries/special/cherryWithDon.glb" id="6_qke5u"]

[node name="CherryOnBush" groups=["cherry"] instance=ExtResource("1_gj0r3")]
script = ExtResource("2_irony")
Type = ""
isGood = false
canInteract = true

[node name="Model" parent="." index="0"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="cherry1" type="Node3D" parent="Model" index="0"]

[node name="cherry1" parent="Model/cherry1" index="0" instance=ExtResource("3_m1epp")]

[node name="cherry2" type="Node3D" parent="Model" index="1"]

[node name="cherry2" parent="Model/cherry2" index="0" instance=ExtResource("4_ggq7r")]

[node name="cherrySpoiled" type="Node3D" parent="Model" index="2"]

[node name="cherrySpoiled" parent="Model/cherrySpoiled" index="0" instance=ExtResource("5_gxad1")]

[node name="cherryWithDon2005" type="Node3D" parent="Model" index="3"]

[node name="cherryWithDon" parent="Model/cherryWithDon2005" index="0" instance=ExtResource("6_qke5u")]

[node name="Area3D" parent="." index="1"]
collision_mask = 16
